--- a/templates/web/child_members.html
+++ b/templates/web/child_members.html
@@ -1,2 +1,10 @@
 {% extends "web/base.html" %}
 
+{% for member in memberList %}
+    <a href="{% url web:memberdetail member.id %}">
+        <img src="{{ MEDIA_URL }}{{ member.photoPath }}" />
+    </a> 
+{% endfor %}
+
+
+
