--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -17,7 +17,7 @@
             <!-- BEGIN header --> 
             <div id="header"> 
                 <img src="{{ STATIC_URL }}images/main/opellogo.png" alt="opellogo" /> 
-                <h1>OpelClub Streetfighters Murtal</h1> 
+                <h1>StreetFighters Murtal</h1> 
             </div> 
             <!-- END header --> 
             
