changing from devserver to apache2 with mod_wsgi

--- a/templates/web/child_members_detail.html
+++ b/templates/web/child_members_detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <img src="{{ member.photoPath }}" />
+    <img src="{{ MEDIA_URL }}{{ member.photoPath }}" />
     <table style="width: 400px;">
         <tr>
             <td><b>Name:</b></td>
@@ -21,7 +21,7 @@
         <h3>Fahrzeuge:</h3>
         {% for car in carList %}
             <div class="car">
-                <img src="{{ car.photoPath }}" />
+                <img src="{{ MEDIA_URL}}{{ car.photoPath }}" />
                 <table style="width: 300px;">
                     <tr>
                         <td><b>Hersteller:</b></td>
